# geoparquet-io

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.claude/: SKILL.md
.claude/commands/: geoparquet.md
.github/workflows/: benchmark.yml  nightly.yml  release-benchmark.yml  tests.yml
.menard/: donttouch  links.toml  reviewed.json
context/: README.md
context/plans/: A5GEO_SUPPORT_PLAN.md
context/shared/adr/: 0001-cli-core-separation.md  0002-duckdb-as-processing-engine.md  0003-logging-over-click-echo.md  0004-python-api-mirrors-cli.md  0005-test-fixture-strategy.md  README.md  template.md
context/shared/documentation/: platform-specific-issues.md
context/shared/plans/: 2025-02-03-admin-prefix-design.md  PROGRESS.md  issue-219-profiling-integration.md  issue-221-persistent-benchmark-baselines.md  s2-support-plan.md  spatial-order-bbox-stats.md
docs/: CHANGELOG.md  WFS-IMPLEMENTATION-PLAN.md  contributing.md  index.md  troubleshooting.md
docs/_includes/: common-cli-options.md  s2-levels.md
docs/api/: core.md  overview.md  python-api.md
docs/cli/: benchmark.md  check.md  convert.md  extract.md  inspect.md  meta.md  sort.md  stac.md  upload.md
docs/concepts/: spatial-indices.md
docs/examples/: basic.md  workflows.md
docs/getting-started/: cli-vs-python.md  installation.md  quickstart.md
docs/guide/: add.md  benchmarks.md  check.md  convert.md  extract.md  geojson.md  inspect.md  llm-integration.md  meta.md  partition.md  piping.md  plugins.md  remote-files.md  sort.md  stac.md  sub-partitioning.md  upload.md
examples/: 03_spatial_indices.ipynb  README.md
geoparquet_io/: __init__.py
geoparquet_io/api/: __init__.py  check.py  ops.py  table.py
geoparquet_io/benchmarks/: operations.py  profile_report.py
geoparquet_io/cli/: decorators.py  fix_helpers.py  main.py
geoparquet_io/core/: add_a5_column.py  add_admin_divisions_multi.py  add_bbox_column.py  add_country_codes.py  add_h3_column.py  add_kdtree_column.py  add_quadkey_column.py  add_s2_column.py  admin_datasets.py  arcgis.py  benchmark.py  benchmark_suite.py  check_fixes.py  check_optimization.py  check_parquet_structure.py  check_spatial_order.py  common.py  constants.py  convert.py  duckdb_metadata.py  extract.py  extract_bigquery.py  format_writers.py  hilbert_order.py  inspect.py  inspect_utils.py  layers.py  metadata_utils.py  partition_admin_hierarchical.py  partition_auto_resolution.py  partition_by_a5.py  partition_by_h3.py  partition_by_quadkey.py  partition_by_s2.py  reproject.py  sort_by_column.py  sort_quadkey.py  stream_io.py  sub_partition.py  wfs.py
geoparquet_io/core/write_strategies/: arrow_memory.py  disk_rewrite.py  duckdb_kv.py
geoparquet_io/skills/: __init__.py  geoparquet.md
plugins/gpio-pmtiles/: README.md
plugins/gpio-pmtiles/gpio_pmtiles/: cli.py  core.py
plugins/gpio-pmtiles/tests/: test_pmtiles.py
scripts/: __init__.py  doc_sync.py  generate_claude_md_sections.py  generate_skill_commands.py  update_freshness.py  validate_claude_md.py  version_benchmark.py
skills/geoparquet/: Skill.md
tests/: README.md  conftest.py  test_add.py  test_add_s2.py  test_admin_datasets.py  test_adr.py  test_api.py  test_arcgis.py  test_benchmark_explain.py  test_benchmark_suite.py  test_bloom_filter.py  test_check_fixes_core.py  test_check_optimization.py  test_check_parquet_structure.py  test_check_spatial_order.py  test_check_spatial_pushdown.py  test_codespell.py  test_commitizen.py  test_common_utils.py  test_compression_stats.py  test_conversion_end_to_end.py  test_convert.py  test_convert_crs_roundtrip.py  test_convert_layer.py  test_crs_write_paths.py  test_doc_sync.py  test_dry_run.py  test_duckdb_metadata.py  test_extract.py  test_extract_bigquery.py  test_filegdb_crs.py  test_format_writers.py  test_generate_claude_md.py  test_geojson_crs_default.py  test_geoparquet_both.py  test_hilbert_order_helpers.py  test_hive_partition.py  test_import_linter.py  test_inspect.py  test_list_layers.py  (+21 more)
tests/data/: multilayer_test.gpkg
tests/data/testopenfilegdb.gdb/: a00000001.TablesByName.atx  a00000001.gdbtable  a00000001.gdbtablx  a00000003.gdbtable  a00000004.CatItemsByPhysicalName.atx  a00000004.CatItemsByType.atx  a00000004.FDO_UUID.atx  a00000004.freelist  a00000004.gdbtable  a00000004.gdbtablx  a00000006.CatRelsByDestinationID.atx  a00000006.CatRelsByOriginID.atx  a00000006.CatRelsByType.atx  a00000006.FDO_UUID.atx  a00000006.gdbtable  a00000006.gdbtablx  a00000009.gdbindexes  a00000009.gdbtable  a00000009.gdbtablx  a0000000a.gdbindexes  a0000000a.gdbtable  a0000000a.gdbtablx  a0000000a.idx_adate.atx  a0000000a.idx_float.atx  a0000000a.idx_guid.atx  a0000000a.idx_int.atx  a0000000a.idx_real.atx  a0000000a.idx_smallint.atx  a0000000a.idx_str.atx  a0000000b.gdbtable  a0000000b.gdbtablx  a0000000c.gdbtable  a0000000c.gdbtablx  a0000000e.gdbtable  a0000000e.gdbtablx  a0000000f.gdbtable  a0000000f.gdbtablx  a00000010.gdbtable  a00000010.gdbtablx  a00000010.spx  (+44 more)
