[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geoparquet-io"
version = "1.0.0b2"
description = "Fast I/O and transformation tools for GeoParquet files"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Chris Holmes", email = "cholmes@9eo.org" }
]
keywords = ["geoparquet", "geospatial", "parquet", "gis", "io"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "click>=8.0.0",
    "click-plugins>=1.1.1",  # Plugin system for extending CLI
    "pyarrow>=12.0.0,<23.0.0",  # v22+ has ABI incompatibility with abseil on some systems
    "duckdb>=1.5.0",
    "pandas>=1.0.0",
    "fsspec>=2023.9.0",
    "rich>=13.0.0",
    "pystac>=1.9.0",
    "jsonschema>=4.0.0",  # Required for pystac validation
    "psutil>=5.9.0",
    "obstore>=0.8.2",
    "aiohttp>=3.13.4",  # Required by fsspec for HTTP/HTTPS support (CVE-2026-* fixes)
    "s3fs>=2023.9.0",  # Required by fsspec for S3 support
    "geoarrow-pyarrow>=0.1.0",  # Required for CRS handling in Parquet native geo types
    "pyproj>=3.0.0",  # Required for CRS handling and PROJJSON generation
    "mercantile>=1.2.0",  # Required for quadkey generation
    "httpx>=0.25.0",  # Required for ArcGIS REST API requests (http2 disabled due to ArcGIS compatibility)
    "owslib>=0.29.0",  # Required for OGC Web Feature Service (WFS) extraction
    # Security: explicit constraint for transitive dependency
    "requests>=2.33.0",  # CVE-2026-25645 fix
]

[project.scripts]
gpio = "geoparquet_io:cli"
gt = "geoparquet_io:cli"  # Legacy alias for backwards compatibility

[project.urls]
"Homepage" = "https://github.com/geoparquet/geoparquet-io"
"Bug Tracker" = "https://github.com/geoparquet/geoparquet-io/issues"
"Documentation" = "https://geoparquet.io/"
"Source" = "https://github.com/geoparquet/geoparquet-io"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.5.0",
    "nbmake>=1.5.0",
    "ruff>=0.8.0",
    "pre-commit>=4.3.0",
    "mypy>=1.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "vulture>=2.14",
    "radon>=6.0.1",
    "xenon>=0.9.3",
    "commitizen>=4.0",
    "mutmut>=3.0",
    "pyyaml>=6.0",
    "codespell>=2.2",
    "import-linter>=2.0",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "menard @ git+https://github.com/nlebovits/menard.git",
    "deptry>=0.25.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
benchmark = [
    "geopandas>=0.14.0",
    "pyogrio>=0.7.0",
    "fiona>=1.9.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["geoparquet_io"]
# Include markdown skill files in wheel
artifacts = ["geoparquet_io/skills/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=geoparquet_io",
    "--cov-report=term-missing",
    "--cov-fail-under=67",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests requiring network access (deselect with '-m \"not network\"')",
    "integration: marks end-to-end integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["geoparquet_io"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
# Suppress errors from libraries that don't ship type stubs
ignore_missing_imports = true

# Per-module overrides for files with known type issues.
# These suppress errors in complex modules until they are incrementally fixed.
# TODO: Remove overrides as type annotations are added to each module.
[[tool.mypy.overrides]]
module = [
    "geoparquet_io.api.check",
    "geoparquet_io.api.ops",
    "geoparquet_io.api.table",
    "geoparquet_io.benchmarks.profile_report",
    "geoparquet_io.cli.decorators",
    "geoparquet_io.cli.main",
    "geoparquet_io.core.add_bbox_column",
    "geoparquet_io.core.add_country_codes",
    "geoparquet_io.core.add_h3_column",
    "geoparquet_io.core.add_kdtree_column",
    "geoparquet_io.core.add_quadkey_column",
    "geoparquet_io.core.add_s2_column",
    "geoparquet_io.core.admin_datasets",
    "geoparquet_io.core.arcgis",
    "geoparquet_io.core.benchmark",
    "geoparquet_io.core.benchmark_suite",
    "geoparquet_io.core.check_fixes",
    "geoparquet_io.core.check_parquet_structure",
    "geoparquet_io.core.check_spatial_order",
    "geoparquet_io.core.common",
    "geoparquet_io.core.convert",
    "geoparquet_io.core.duckdb_metadata",
    "geoparquet_io.core.extract",
    "geoparquet_io.core.extract_bigquery",
    "geoparquet_io.core.hilbert_order",
    "geoparquet_io.core.inspect_utils",
    "geoparquet_io.core.metadata_utils",
    "geoparquet_io.core.partition_admin_hierarchical",
    "geoparquet_io.core.partition_auto_resolution",
    "geoparquet_io.core.partition_by_a5",
    "geoparquet_io.core.partition_by_h3",
    "geoparquet_io.core.partition_by_kdtree",
    "geoparquet_io.core.partition_by_s2",
    "geoparquet_io.core.partition_by_string",
    "geoparquet_io.core.partition_reader",
    "geoparquet_io.core.reproject",
    "geoparquet_io.core.sort_by_column",
    "geoparquet_io.core.sort_quadkey",
    "geoparquet_io.core.split_by_country",
    "geoparquet_io.core.stac",
    "geoparquet_io.core.stac_check",
    "geoparquet_io.core.stream_io",
    "geoparquet_io.core.streaming",
    "geoparquet_io.core.sub_partition",
    "geoparquet_io.core.upload",
    "geoparquet_io.core.validate",
    "geoparquet_io.core.write_strategies",
    "geoparquet_io.core.write_strategies.arrow_streaming",
    "geoparquet_io.core.write_strategies.base",
    "geoparquet_io.core.write_strategies.disk_rewrite",
    "geoparquet_io.core.write_strategies.duckdb_kv",
]
ignore_errors = true

[tool.mutmut]
paths_to_mutate = "geoparquet_io/"
tests_dir = "tests/"
runner = "python -m pytest -x -q --tb=no"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "docs"]
skips = [
    "B608",  # SQL injection false positives: DuckDB is an embedded OLAP database;
             # all SQL queries use internally-derived column names (from schema detection),
             # not untrusted user input. Parameterised queries are not supported for
             # column/table identifiers in DuckDB's Python API.
    "B110",  # try/except/pass: all instances are intentional (race-condition guards for
             # DuckDB extension installation, optional cleanup, optional metadata ops).
    "B112",  # try/except/continue: intentional in iteration over optional schema columns.
    "B404",  # subprocess import: used only in the benchmark module to call ogr2ogr.
    "B603",  # subprocess without shell=True: ogr2ogr call in benchmark with a fixed argv list.
    "B607",  # partial executable path: ogr2ogr relies on PATH, which is standard practice.
    "B105",  # hardcoded password: false positive on an ArcGIS token endpoint URL constant.
    "B101",  # assert used: single internal logic guard (assert overall_bounds is not None).
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0b2"
version_files = ["pyproject.toml:^version"]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
major_version_zero = true

[tool.vulture]
min_confidence = 80
paths = ["geoparquet_io", "tests"]
sort_by_size = true
verbose = false

[tool.codespell]
skip = ".git,*.lock,*.parquet,*.json,tests/data/*,.venv,uv.lock"
ignore-words-list = "nd,ot,crs,inout"
check-filenames = true

[tool.coverage.run]
source = ["geoparquet_io"]
branch = false
omit = [
    "geoparquet_io/__init__.py",
]

[tool.coverage.report]
fail_under = 67
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.importlinter]
root_package = "geoparquet_io"
include_external_packages = true

[[tool.importlinter.contracts]]
id = "core-no-click"
name = "Core modules must not import Click"
type = "forbidden"
source_modules = ["geoparquet_io.core"]
forbidden_modules = ["click"]
# TODO: These are existing violations to be fixed incrementally. New code must not import click in core/.
# Direct click imports in existing core modules are ignored until cleaned up.
# The indirect path (benchmark_suite -> geoparquet_io root -> cli.main -> click)
# is also excluded since benchmark_suite lazily imports __version__ from the root package.
ignore_imports = [
    "geoparquet_io.core.* -> click",
    "geoparquet_io.core.benchmark_suite -> geoparquet_io",
]
# Alert when ignored patterns no longer match any actual imports (stale ignores)
unmatched_ignore_imports_alerting = "warn"

[[tool.importlinter.contracts]]
id = "api-no-cli"
name = "API modules must not import CLI"
type = "forbidden"
source_modules = ["geoparquet_io.api"]
forbidden_modules = ["geoparquet_io.cli"]

[dependency-groups]
dev = [
    "import-linter>=2.11",
    "pygments>=2.20.0",  # CVE-2026-4539 fix
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]

[tool.deptry]
# DEP002: unused dependencies - skip because optional/benchmark extras aren't always used
ignore = ["DEP002"]
# Exclude virtual env, tests, and benchmarks from analysis
exclude = [".venv", "tests", "geoparquet_io/benchmarks"]
# Known transitive dependencies that appear unused but are required
per_rule_ignores = {DEP003 = ["tomli"]}

[tool.menard]
mode = "block"
transitive_depth = 1
enforce_symmetry = true
require_links = ["geoparquet_io/**/*.py"]
exempt = ["tests/**"]
doc_paths = ["docs/**/*.md", "README.md", "CLAUDE.md", "geoparquet_io/skills/*.md"]
